--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/tkidanu2/ArrayHigherLevelFunctions/blob/main/assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "affe53ce",
       "metadata": {
         "id": "affe53ce"
@@ -20,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "d9a29d9a",
       "metadata": {
         "id": "d9a29d9a"
@@ -51,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "7a17eb00",
       "metadata": {
         "id": "7a17eb00"
@@ -207,16 +217,141 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "Week 00 Assignment - My MinHeap Solution"
+        "#Week 00 Assignment - My MinHeap Solution"
       ],
       "metadata": {
-        "id": "dngKhEDu6PHr"
+        "id": "YUHdHKn888nr"
       },
-      "id": "dngKhEDu6PHr",
-      "execution_count": null,
-      "outputs": []
+      "id": "YUHdHKn888nr"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from os.path import samefile\n",
+        "class MinHeap:\n",
+        "    def __init__(self) -> None:\n",
+        "        self.heap_array: list[str] = []\n",
+        "        self.element_counter = 0\n",
+        "\n",
+        "    def left_child(self, parent: int) -> int:\n",
+        "        return 2 * parent + 1\n",
+        "\n",
+        "    def right_child(self, parent: int) -> int:\n",
+        "        return 2 * (parent + 1)\n",
+        "\n",
+        "    def parent(self, child: int) -> int:\n",
+        "        return (child - 1) // 2\n",
+        "\n",
+        "    def swap(self, i: int, j:int) -> int:\n",
+        "      \"\"\"In-place swap of two elemnets.\"\"\"\n",
+        "      if i != j:\n",
+        "        temp = self.heap_array[i]\n",
+        "        self.heap_array[i] = self.heap_array[j]\n",
+        "        self.heap_array[j] = temp\n",
+        "\n",
+        "    def size(self) -> int:\n",
+        "      \"\"\"Return the number of elements currently stored in the heap.\"\"\"\n",
+        "      return self.element_counter\n",
+        "\n",
+        "    def peek(self) -> str | None:\n",
+        "      \"\"\"Return (without removing) the smallest element of the heap.\"\"\"\n",
+        "      if self.element_counter == 0:\n",
+        "        return None\n",
+        "      return self.heap_array[0]\n",
+        "\n",
+        "    def add(self, value: str) -> None:\n",
+        "      \"\"\"Add a new element to the heap array and restore heap property bottom-up.\"\"\"\n",
+        "      self.heap_array.append(value)\n",
+        "      self.element_counter += 1\n",
+        "      self.heapify_up(self.element_counter - 1)\n",
+        "\n",
+        "    def remove(self) -> str | None:\n",
+        "      \"\"\"Remove and return the smallest element from the heap array and restore heap property top-down.\"\"\"\n",
+        "      if self.element_counter == 0:\n",
+        "        return None\n",
+        "\n",
+        "      removed = self.heap_array[0]\n",
+        "      #move last element to root\n",
+        "      self.heap_array[0] = self.heap_array[self.element_counter - 1]\n",
+        "      #pop last element\n",
+        "      self.heap_array.pop()\n",
+        "      self.element_counter -= 1\n",
+        "\n",
+        "      if self.element_counter > 0:\n",
+        "        self.heapify_down(0)\n",
+        "\n",
+        "      return removed\n",
+        "\n",
+        "    def heapify_up(self, index: int) -> None:\n",
+        "      \"\"\"Restore the minimum-heap property after inserting a new element.\"\"\"\n",
+        "      while index > 0:\n",
+        "        parent_index = self.parent(index)\n",
+        "        if self.heap_array[index] < self.heap_array[parent_index]:\n",
+        "          self.swap(index, parent_index)\n",
+        "          index = parent_index\n",
+        "        else:\n",
+        "          index = 0 # stop loop without 'break'\n",
+        "\n",
+        "    def heapify_down(self, index: int) -> None:\n",
+        "      \"\"\"Restore the minimum-heap property after removing the smallest element.\"\"\"\n",
+        "      smallest = index\n",
+        "      left = self.left_child(index)\n",
+        "      right = self.right_child(index)\n",
+        "\n",
+        "      while left < self.element_counter:\n",
+        "        smallest = index\n",
+        "        if self.heap_array[left] < self.heap_array[smallest]:\n",
+        "          smallest = left\n",
+        "        if right < self.element_counter and self.heap_array[right] < self.heap_array[smallest]:\n",
+        "          smallest = right\n",
+        "\n",
+        "        if smallest == index:\n",
+        "          return\n",
+        "\n",
+        "        self.swap(index, smallest)\n",
+        "        index = smallest\n",
+        "        left = self.left_child(index)\n",
+        "        right = self.right_child(index)\n",
+        "\n",
+        "\n",
+        "# Example usage\n",
+        "if __name__ == \"__main__\":\n",
+        "    heap = MinHeap()\n",
+        "    heap.add(\"dog\")\n",
+        "    heap.add(\"apple\")\n",
+        "    heap.add(\"zebra\")\n",
+        "    heap.add(\"cat\")\n",
+        "\n",
+        "    print(\"Heap size:\", heap.size())         # 4\n",
+        "    print(\"Peek:\", heap.peek())              # apple\n",
+        "    print(\"Removed:\", heap.remove())         # apple\n",
+        "    print(\"Peek after remove:\", heap.peek()) # cat\n",
+        "    print(\"Heap size after remove:\", heap.size())  # 3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tufGl4Zd9Kff",
+        "outputId": "36d8f642-140c-4bf7-de7a-320f07e698f7"
+      },
+      "id": "tufGl4Zd9Kff",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Heap size: 4\n",
+            "Peek: apple\n",
+            "Removed: apple\n",
+            "Peek after remove: cat\n",
+            "Heap size after remove: 3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -267,7 +402,8 @@
       "version": "3.12.1"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
